# federated_learning_master_thesis

./: .gitignore  README.md  THESIS.md  flower_docs.md  requirements.txt
.github/: copilot-instructions.md  permissions-config.local.json
.github/skills/context-audit/: SKILL.md
.github/skills/ingnore-folders/: SKILL.md
federated-learning-pytorch/: LICENSE  client_evaluate_metrics.csv  experiments.json  final_model.pt  pyproject.toml  requirements.txt  run_batch_examples.py  server_evaluate_metrics.csv
federated-learning-pytorch/src/: client_app.py  data_loader.py  model.py  server_app.py
local_training/: config.toml  run_local_training.py
src/: client.py  data_loader.py  final_model.pt  model.py  pyproject.toml  requirements.txt  server.py  server_evaluate_metrics.csv
