[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning-pythorch"
version = "1.1.1"
description = "Federated Learning with PyTorch"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pandas",
    "opacus"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32
max-grad-norm = 1.0
target-delta = 1e-5
target-epsilon = 3.0
dirichlet-alpha = 0.1