[project]
name = "masterthesisfederatedlearning"
version = "0.0.1"
description = "Simulationg a federated learning enviroment with different values of dirichlet distribution and privacy budget"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "flwr>=1.15.0",
    "flwr-datasets>=0.3.0",
    "opacus>=1.4.0",
    "pandas",
]

[tool.flwr.app]
publisher = "Leonardo Salpini"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-evaluate = 1
local-epochs = 1
learning-rate = 0.01
batch-size = 64
max-grad-norm = 1.0
target-epsilon = 3
target-delta = 1e-5